samples/_failures_safe/1761523242_4f0ed8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_04a8e175.c: In function ‘main’:
./samples/SAFE/__tmp_04a8e175.c:128:5: error: expected declaration or statement at end of input
  128 |     printf("\nLast 5 log entries:\n");
      |     ^~~~~~
